Fixed profile page spacing and remove dropdown margin.

--- a/app/assets/stylesheets/dropdown.css
+++ b/app/assets/stylesheets/dropdown.css
@@ -30,7 +30,3 @@
   border: 2.5px solid var(--medium-gray-color);
   border-radius: 5px;
 }
-
-.dropdown-content {
-  margin-left: 1%;
-}
